--- a/doc/cha-cert-auth.texi
+++ b/doc/cha-cert-auth.texi
@@ -1,5 +1,5 @@
 @node More on certificate authentication
-@chapter More on Certificate Authentication
+@chapter More on certificate authentication
 @cindex Certificate authentication
 
 @menu
@@ -11,7 +11,7 @@
 @end menu
 
 @node The X.509 trust model
-@section The @acronym{X.509} Trust Model
+@section The @acronym{X.509} trust model
 @cindex @acronym{X.509} certificates
 
 The @acronym{X.509} protocols rely on a hierarchical trust model. In
@@ -38,7 +38,7 @@ Detailed examples involving X.509 certificates are listed below.
 @end menu
 
 @node X.509 certificates
-@subsection @acronym{X.509} Certificates
+@subsection @acronym{X.509} certificates
 
 An @acronym{X.509} certificate usually contains information about the
 certificate holder, the signer, a unique serial number, expiration
@@ -139,7 +139,7 @@ demonstrate the @acronym{X.509} parsing capabilities can be found at
 @ref{ex:x509-info}.
 
 @node Verifying X.509 certificate paths
-@subsection Verifying @acronym{X.509} Certificate Paths
+@subsection Verifying @acronym{X.509} certificate paths
 @cindex Verifying certificate paths
 @tindex gnutls_certificate_verify_flags
 
@@ -262,7 +262,7 @@ certificate's owner is the one you expect. For more information
 consult @xcite{RFC2818} and section @ref{ex:verify} for an example.
 
 @node Certificate requests
-@subsection @acronym{PKCS} #10 Certificate Requests
+@subsection @acronym{PKCS} #10 certificate requests
 @cindex Certificate requests
 @cindex @acronym{PKCS} #10
 
@@ -281,7 +281,7 @@ which should return a signed certificate.
 @verbatiminclude examples/ex-crq.c
 
 @node PKCS 12 structures
-@subsection @acronym{PKCS} #12 Structures
+@subsection @acronym{PKCS} #12 structures
 @cindex @acronym{PKCS} #12
 
 A @acronym{PKCS} #12 structure @xcite{PKCS12} usually contains a user's
@@ -301,8 +301,8 @@ below.
 @verbatiminclude examples/ex-pkcs12.c
 
 @node The OpenPGP trust model
-@section The @acronym{OpenPGP} Trust Model
-@cindex @acronym{OpenPGP} Keys
+@section The @acronym{OpenPGP} trust model
+@cindex @acronym{OpenPGP} keys
 
 The @acronym{OpenPGP} key authentication relies on a distributed trust
 model, called the ``web of trust''. The ``web of trust'' uses a
@@ -332,7 +332,7 @@ only Kevin, for some reason. A reason could be that Bob is lazy
 enough, and signs other people's keys without being sure that they
 belong to the actual owner.
 
-@subsection @acronym{OpenPGP} Keys
+@subsection @acronym{OpenPGP} keys
 
 In @acronym{GnuTLS} the @acronym{OpenPGP} key structures
 @xcite{RFC2440} are handled using the @code{gnutls_openpgp_crt_t} type
@@ -340,7 +340,7 @@ and the corresponding private keys with the
 @code{gnutls_openpgp_privkey_t} type. All the prototypes for the key
 handling functions can be found at @file{gnutls/openpgp.h}.
 
-@subsection Verifying an @acronym{OpenPGP} Key
+@subsection Verifying an @acronym{OpenPGP} key
 
 The verification functions of @acronym{OpenPGP} keys, included in
 @acronym{GnuTLS}, are simple ones, and do not use the features of the
@@ -427,7 +427,7 @@ are sharing a module. To avoid this problem GnuTLS uses p11-kit@footnote{@url{ht
 that provides a middleware to control access to resources over the
 multiple users.
 
-@subsection Reading Objects
+@subsection Reading objects
 
 All @acronym{PKCS} #11 objects are referenced by @acronym{GnuTLS} functions by
 URLs as described in @code{draft-pechanec-pkcs11uri-03}. For example a public
@@ -496,7 +496,7 @@ That example will only list all certificates in a token that have a correspondin
 private key.
 @verbatiminclude examples/ex-pkcs11-list.c
 
-@subsection Writing Objects
+@subsection Writing objects
 
 With @acronym{GnuTLS} you can copy existing private keys and certificates
 to a token. This can be achieved with the following functions
@@ -556,7 +556,7 @@ gnutls_privkey_t abs_key;
 
 
 @node Digital signatures
-@section Digital Signatures
+@section Digital signatures
 @cindex Digital signatures
 
 In this section we will provide some information about digital
@@ -620,7 +620,7 @@ sometime in the future, SHA-1 will be disabled as well.  The collision
 attacks on SHA-1 may also get better, given the new interest in tools
 for creating them.
 
-@subsection Trading Security for Interoperability
+@subsection Trading security for interoperability
 
 If you connect to a server and use GnuTLS' functions to verify the
 certificate chain, and get a @code{GNUTLS_CERT_INSECURE_ALGORITHM}
