increased size of fdl.

--- a/doc/latex/fdl.tex
+++ b/doc/latex/fdl.tex
@@ -26,7 +26,7 @@
 \begin{center}
 {\bf\small Preamble}
 \end{center}
-{\tiny 
+{\scriptsize 
 
 The purpose of this License is to make a manual, textbook, or other
 functional and useful document ``free'' in the sense of freedom: to
@@ -56,7 +56,7 @@ principally for works whose purpose is instruction or reference.
 %\addcontentsline{toc}{section}{1. APPLICABILITY AND DEFINITIONS}
 \end{center}
 
-{\tiny 
+{\scriptsize 
 
 This License applies to any manual or other work, in any medium, that
 contains a notice placed by the copyright holder saying it can be
@@ -153,7 +153,7 @@ no effect on the meaning of this License.
 %\addcontentsline{toc}{section}{2. VERBATIM COPYING}
 \end{center}
 
-{\tiny
+{\scriptsize
 You may copy and distribute the Document in any medium, either
 commercially or noncommercially, provided that this License, the
 copyright notices, and the license notice saying this License applies
@@ -174,7 +174,7 @@ you may publicly display copies.
 %\addcontentsline{toc}{section}{3. COPYING IN QUANTITY}
 \end{center}
 
-{\tiny
+{\scriptsize
 
 If you publish printed copies (or copies in media that commonly have
 printed covers) of the Document, numbering more than 100, and the
@@ -218,7 +218,7 @@ them a chance to provide you with an updated version of the Document.
 %\addcontentsline{toc}{section}{4. MODIFICATIONS}
 \end{center}
 
-{\tiny
+{\scriptsize
 
 You may copy and distribute a Modified Version of the Document under
 the conditions of sections 2 and 3 above, provided that you release
@@ -340,7 +340,7 @@ imply endorsement of any Modified Version.
 %\addcontentsline{toc}{section}{5. COMBINING DOCUMENTS}
 \end{center}
 
-{\tiny
+{\scriptsize
 
 You may combine the Document with other documents released under this
 License, under the terms defined in section~4 above for modified
@@ -371,7 +371,7 @@ Entitled ``Endorsements''.
 %\addcontentsline{toc}{section}{6. COLLECTIONS OF DOCUMENTS}
 \end{center}
 
-{\tiny
+{\scriptsize
 You may make a collection consisting of the Document and other documents
 released under this License, and replace the individual copies of this
 License in the various documents with a single copy that is included in
@@ -390,7 +390,7 @@ other respects regarding verbatim copying of that document.
 %\addcontentsline{toc}{section}{7. AGGREGATION WITH INDEPENDENT WORKS}
 \end{center}
 
-{\tiny
+{\scriptsize
 
 A compilation of the Document or its derivatives with other separate
 and independent documents or works, in or on a volume of a storage or
@@ -416,7 +416,7 @@ aggregate.
 %\addcontentsline{toc}{section}{8. TRANSLATION}
 \end{center}
 
-{\tiny
+{\scriptsize
 
 Translation is considered a kind of modification, so you may
 distribute translations of the Document under the terms of section~4.
@@ -444,7 +444,7 @@ title.
 \end{center}
 
 
-{\tiny
+{\scriptsize
 You may not copy, modify, sublicense, or distribute the Document
 except as expressly provided under this License.  Any attempt
 otherwise to copy, modify, sublicense, or distribute it is void, and
@@ -478,7 +478,7 @@ not give you any rights to use it.
 \end{center}
 
 
-{\tiny
+{\scriptsize
 The Free Software Foundation may publish new, revised versions
 of the GNU Free Documentation License from time to time.  Such new
 versions will be similar in spirit to the present version, but may
@@ -505,7 +505,7 @@ Document.
 %\addcontentsline{toc}{section}{11. RELICENSING}
 \end{center}
 
-{\tiny
+{\scriptsize
 
 ``Massive Multiauthor Collaboration Site'' (or ``MMC Site'') means any
 World Wide Web server that publishes copyrightable works and also
@@ -541,7 +541,7 @@ provided the MMC is eligible for relicensing.
 %\addcontentsline{toc}{section}{ADDENDUM: How to use this License for your documents}
 \end{center}
 
-{\tiny
+{\scriptsize
 To use this License in a document you have written, include a copy of
 the License in the document and put the following copyright and
 license notices just after the title page:
