--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,17 @@ Copyright (C) 2000, 2001, 2002, 2003, 2004, 2005,
               2006, 2007, 2008, 2009, 2010, 2011 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+* Version 2.12.8 (unreleased)
+
+** libgnutls: gcrypt: replaced occurences of gcry_sexp_nth_mpi (..., 0)
+with gcry_sexp_nth_mpi (..., GCRYMPI_FMT_USG) to fix errors with 1.5.0.
+
+** libgnutls: writev_emu: stop on the first incomplete write
+
+** API and ABI modifications:
+No changes since last version.
+
+
 * Version 2.12.7 (released 2011-06-18)
 
 ** p11tool: Require login as security officer if --trusted option is
