--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,14 @@ Copyright (C) 2000, 2001, 2002, 2003, 2004, 2005,
               2006, 2007, 2008, 2009, 2010 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+* Version 3.0.0 (unreleased)
+
+** libgnutls: writev_emu: stop on the first incomplete write
+
+** API and ABI modifications:
+No changes since last version.
+
+
 * Version 2.99.4 (released 2011-07-23)
 
 ** doc: documentation updates.
