--- a/THANKS
+++ b/THANKS
@@ -115,6 +115,7 @@ Vitaly Kruglikov		<vitaly.kruglikov [at] palm.com>
 Kalle Olavi Niemitalo 		<kon [at] iki.fi>
 Dash Shendy                     <admin [at] dash.za.net>
 Rickard Bellgrim                <rickard [at] opendnssec.org>
+Petr Písař                      <petr.pisar [at] atlas.cz>
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
